ingress/alb.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: oficina5
  name: alb-ingress-eks
  annotations:

    # Ingress GroupName
    alb.ingress.kubernetes.io/group.name: eks-alb-ingress

    # Ingress Core Settings
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:837042927026:certificate/cc9c7e91-ca24-44ec-8d8e-46a5d34fe043
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    #alb.ingress.kubernetes.io/security-groups: my-security-group-ids, ...
    #alb.ingress.kubernetes.io/subnets: my-vpc-subnets, ...

    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200-404'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'

spec:
  rules:
    - host: api-plan-agricola-dev.oficina5.com.br
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: plan-agricola-dev
              servicePort: 80
    - host: api-starter-dev.oficina5.com.br
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: starter-dev
              servicePort: 80
    - host: api-agrocrm-dev.oficina5.com.br
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: api-agrocrm-dev
              servicePort: 80
    - host: api-agrocrm-hml.oficina5.com.br
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: api-agrocrm-hml
              servicePort: 80
    - host: api-corporate-dev.oficina5.com.br
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: api-corporate-dev
              servicePort: 80
    - host: api-corporate-qas.oficina5.com.br
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: api-corporate-qas
              servicePort: 80
    - host: api-flg-qas.oficina5.com.br
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: api-flg-qas
              servicePort: 80
    - host: api.projetopipas.com.br
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: api-pipas-hml
              servicePort: 80
    - host: api-ercal-qas.oficina5.com.br
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: api-ercal-qas
              servicePort: 80
    - host: api-demo-connecterp.oficina5.com.br
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: api-demo-connecterp
              servicePort: 80
