ingress/nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: oficina5
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: eks.oficina5.com.br
      http:
        paths:
          - backend:
              serviceName: svc-api
              servicePort: 80
    - host: eks1.oficina5.com.br
      http:
        paths:
          - backend:
              serviceName: svc-nginx
              servicePort: 80
